[package]
name = "crate_downloader"
description = "This project allows you to download source code of a single Rust crate from crates.io or download the entire crates.io to local. We provide both library and runnable codes to do so."
version = "0.1.1"
edition = "2021"
default-run = "crate_downloader"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Cargo-Ecosystem-Monitor/Cargo-Crate-Downloader"
readme = "README.md"
homepage = "https://github.com/Cargo-Ecosystem-Monitor"
keywords = ["download", "ecosystem"]
categories = ["development-tools"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
downloader = "0.2.6"
postgres = "0.19.2"
log = "0.4.14"
simplelog = "0.12.0"
anyhow = "1.0.56"
crossbeam = "0.8.1"
pbr = "=1.0.4"
